syntax = "proto3";
package mmp.im.protocol;


option java_outer_classname = "ClientLoginBody";


message ClientLogin {
    int64 seq = 1;
    string from = 2;
    string to = 3;
    string token = 4;
    string userId = 5;
}
